Delete coefficient of cut and its dependencies.

--- a/Views/Menu.xaml
+++ b/Views/Menu.xaml
@@ -39,15 +39,13 @@
             <Label Content="Mutation rate" Foreground="Black" Height="30" Canvas.Left="915" Canvas.Top="171" Width="158" FontSize="16" RenderTransformOrigin="0.5,0.5" />
             <TextBox Text="{Binding Parameters.PercentageOfChildrenFromPreviousGeneration}" Canvas.Left="1084" Canvas.Top="205" Height="31" Width="164"/>
             <Label Content="Percentage of children&#xA;from previous generation" Foreground="Black" Height="51" Canvas.Left="1078" Canvas.Top="148" Width="197" FontSize="16" RenderTransformOrigin="0.5,0.5" />
-            <TextBox Text="{Binding Parameters.MaxPossibleCutsPerPlank}" Canvas.Left="323" Canvas.Top="300" Height="30" Width="164"/>
-            <Label Content="Max Possible Cuts&#xA;Per Plank" Foreground="Black" Height="51" Canvas.Left="323" Canvas.Top="242" Width="139" FontSize="16" RenderTransformOrigin="0.5,0.5" />
-            <TextBox Text="{Binding Parameters.CoefficientOfCut}" Canvas.Left="580" Canvas.Top="300" Height="30" Width="164"/>
-            <Label Content="             Coefficient of cut&#xA;(minor unit stock/minor unit plank" Foreground="Black" Height="52" Canvas.Left="554" Canvas.Top="243" Width="276" FontSize="16" RenderTransformOrigin="0.5,0.5" />
-            <TextBox Text="{Binding Parameters.PercentageOfParentsChosenToSelection}" Canvas.Left="855" Canvas.Top="303" Height="30" Width="164"/>
-            <Label Content="Percentage of parents &#xA; chosen to selection" Foreground="Black" Height="52" Canvas.Left="855" Canvas.Top="246" Width="174" FontSize="16" RenderTransformOrigin="0.5,0.5" />
+            <TextBox Text="{Binding Parameters.LengthOfPlank}" Canvas.Left="323" Canvas.Top="300" Height="30" Width="164"/>
+            <Label Content="Length of plank" Foreground="Black" Height="51" Canvas.Left="323" Canvas.Top="242" Width="139" FontSize="16" RenderTransformOrigin="0.5,0.5" />
+            <TextBox Text="{Binding Parameters.PercentageOfParentsChosenToSelection}" Canvas.Left="685" Canvas.Top="300" Height="30" Width="164"/>
+            <Label Content="Percentage of parents &#xA; chosen to selection" Foreground="Black" Height="52" Canvas.Left="685" Canvas.Top="243" Width="174" FontSize="16" RenderTransformOrigin="0.5,0.5" />
             <Button Command="{Binding FillPlankWarehouse}" Content="Fill" Height="26" Canvas.Left="47" Canvas.Top="641" Width="100" Foreground="Black" FontSize="12"/>
-            <TextBox Text="{Binding Parameters.PromotionRate}" Canvas.Left="1078" Canvas.Top="303" Height="30" Width="164"/>
-            <Label Content="Promotion rate" Foreground="Black" Height="52" Canvas.Left="1078" Canvas.Top="246" Width="174" FontSize="16" RenderTransformOrigin="0.5,0.5" />
+            <TextBox Text="{Binding Parameters.PromotionRate}" Canvas.Left="1033" Canvas.Top="303" Height="30" Width="164"/>
+            <Label Content="Promotion rate" Foreground="Black" Height="52" Canvas.Left="1033" Canvas.Top="246" Width="174" FontSize="16" RenderTransformOrigin="0.5,0.5" />
         </Canvas>
     </Grid>
 </Page>
