--- a/Views/Plots.xaml
+++ b/Views/Plots.xaml
@@ -26,6 +26,7 @@
     <Grid>
         <Canvas>
             <Button Command="{Binding GoBackToMenu}" Content="Powrót do menu" BorderBrush="AntiqueWhite" Foreground="AntiqueWhite" Background="AntiqueWhite" FontSize="12" Canvas.Left="1179" Canvas.Top="533"/>
+            <Label Content="Parametry algorytmu" FontSize="22" HorizontalContentAlignment="Center" HorizontalAlignment="Left" VerticalAlignment="Top" Height="46" Width="221" Canvas.Left="197" Canvas.Top="513"/>
         </Canvas>
         <oxy:Plot x:Name="fitnessFunction" 
                   Title="Funkcja celu" 
@@ -67,7 +68,7 @@
                 <oxy:ColumnSeries Title="Wycięte" ItemsSource="{Binding StocksData}" ValueField="CuttedStock" Color="Blue"/>
             </oxy:Plot.Series>
         </oxy:Plot>
-        <Label Content="Parametry algorytmu:" FontSize="22" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="197,513,0,0" VerticalAlignment="Top" Height="46" Width="221"/>
+        <TextBlock Text="{Binding CuttedPlanks, StringFormat={}Ilość pociętych desek: {0}}" FontSize="32" Foreground="Red" TextAlignment="Center" HorizontalAlignment="Center" Margin="772,559,62,0" VerticalAlignment="Top" Height="91" Width="446"/>
         <Label Content="Czas wykonywania:" HorizontalAlignment="Left" Margin="35,559,0,0" VerticalAlignment="Top" Height="27" Width="108"/>
         <Label Content="{Binding UsedAlgorithmParameters.TimeOfExecuting}" HorizontalAlignment="Left" Margin="175,559,0,0" VerticalAlignment="Top" Height="27" Width="86"  FontWeight="Bold"/>
         <Label Content="Liczba desek w paczce:" HorizontalAlignment="Left" Margin="35,591,0,0" VerticalAlignment="Top" Height="27" Width="135"/>
